# openHAB3-conf

./: .env  .gitignore  README.md  pyproject.toml
automation/jsr223/: test.py
automation/test/: doorlock_state_machine_test.py  hue_offline_state_test.py  security_door_window_statemachine_test.py  simple_sm_test.py  thermostat_state_list_test.py  thermostat_state_machine_test.py
automation/typings/: README.md
doc/: docToolchainConfig.groovy
habapp/: README.md  config.yml  logging.yml
habapp/logging/: Astral.log.1  Astral.log.2  Astral.log.3  ContactSwitch.log.1  ContactSwitch.log.2  ContactSwitch.log.3  DoorLockMode.log.1  DoorLockMode.log.2  HABApp.log.1  HABApp.log.2  HABApp.log.3  HABApp_events.log.1  HABApp_events.log.3  Ikea.log.1  Ikea.log.2  Ikea.log.3  Mqtt.log.1  Mqtt.log.2  Mqtt.log.3  ThermostatMode.log.1  ThermostatMode.log.2  ThermostatMode.log.3  Tinkerforge.log.1  Tinkerforge.log.2  Tinkerforge.log.3
habapp/param/: blinds.yml  ikea.yml  ikea_param_file.yml  light.yml  livarno.yml  maintain_groups.yml  openhab.yml  switch2light.yml  ui_semantics.yml
habapp/rules/: Ikea.py  Thing.py  (+41 more)
rules/: notifications.rules
scripts/: 2024.ics  2025.ics  ephemeris.py  holiday.py  influx_backup.sh  uiSemanticUpdate.js  uiSemanticsCleanup.js
services/: basicui.cfg  birthdays.xml  country_descriptions_de.properties  holidays.xml  holidays_descriptions_de.properties  influxdb.cfg  network.cfg  runtime.cfg  runtime.cfg.dpkg-old
sitemaps/: haus.sitemap
transform/: gardena.map  hue_scene.map  indego.map  thermostat_modes.map  tinkerforge_io16.map  toggle.map
(+135 files in other folders)
